Fix some vertical spacing with infobar, pagetitle, and crawl.

--- a/css/crawl.css
+++ b/css/crawl.css
@@ -1,5 +1,5 @@
 #crawl-text{
-  line-height: 50px;
+  line-height: 57px;
   vertical-align: middle;
   white-space: nowrap;
   font-size: 40px;
